# NeoBaiduTieBa

./: README.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
.github/workflows/: test-build.yml
src/: App.vue  components.d.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/proto/FrsPage/: FrsPageReqIdl.proto  FrsPageResIdl.proto
src-tauri/src/: file_io.rs  lib.rs  main.rs  request.rs
src/api/: adapters.ts  frs-page.ts  get-post.ts  proto-endpoints.ts  tieba-api.ts  user-info.ts  user-post.ts
src/components/common/: Container.vue  ImageViewer.vue  Item.vue  PageState.vue  Toast.vue
src/components/layout/: TabList.vue  Tabs.vue  TitleBar.vue
src/components/notification/: Notification.vue
src/components/reply/: UserReply.vue
src/components/thread/: Reply.vue  SubPost.vue  SubPostView.vue  Thread.vue
src/composables/: usePagedList.ts  useTabNavigation.ts
src/core/: proto-client.ts  proto-loader.ts  request.ts
src/pages/: Debug.vue  Home.vue  Setting.vue
src/pages/search/: Search.vue  SearchInBar.vue
src/pages/threads/: ViewBarThreads.vue  ViewThread.vue
src/pages/user/: Favourite.vue  FollowBar.vue  History.vue  My.vue  User.vue
src/services/: user-manage.ts
src/stores/: history.ts  index.ts  tabs.ts
src/types/: client.ts  common.ts  navigation.ts  settings.ts
