[package]
name = "neotieba"
version = "0.1.0"
description = "A third party Baidu TieBa client"
authors = ["Vkango"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "neotieba_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "image-png", "image-ico"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart"] }
window-vibrancy = "0.5.2"
prost = "0.13.5"
tokio = { version = "1", features = ["full"] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
url = "2.5"
http = "1.0"
base64 = "0.22"
tauri-plugin-clipboard-x = "2.0.1"
